--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -1,5 +1,22 @@
 @import "./variables.scss";
 
-#about-body {
-    padding: 0 4*$cubit;
+
+#about-body { 
+    height: 55vh;
+    width: 80%;
+    padding: 0 4rem;
+    overflow: auto;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    p {
+        font-size: 1.3rem;
+        margin-bottom: 2rem;
+    }
+}
+
+@media only screen and (max-width: 630px) {
+    #about-body {
+        padding: 0;
+        overflow: visible;
+    }
 }
