--- a/src/Styles/Card.scss
+++ b/src/Styles/Card.scss
@@ -1,69 +1,95 @@
 @import "variables.scss";
 
 .single-work-card {
+    margin: 2rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    background-color: $color-almost-white;
-    padding: 2*$cubit 0;
-    width: 20*$cubit;
-    height: 16*$cubit;
-    border-radius: 0px;
-    overflow: hidden;
-    transition: 0.3s ease-in-out;
-    p {
-        display: none;
+    img {
+        margin-bottom: 1rem;
     }
 }
 
-
-
-.title {
-    font-size: 1.8rem;
-    color: $color-main;
-    margin: 0;
-    text-align: center;
-    transition: 0.2s;
-}
-
-.work-image {
-    position: relative;
-    height: 60%;
-    width: 100%;
-    transition: 1s;
-}
-
-.tech-paragraph {
-    margin-top: 2*$cubit;
-    font-weight: 700;
-}
-
 .work-out-link {
-font-size: 0px;
-transition: 0.3s ease-in-out;
+    max-width: 15rem;
+    text-align: center;
+    background-color: $color-accent;
+    // padding: 1rem;
+    margin-top: 1rem;
+    border-radius: 25px;
 }
 
 
 
 
-
-
-.single-work-card:hover {   
-    background-color: $color-accent;                                    //on hover
-    width: 50*$cubit;
-    padding: 2*$cubit;
+@media only screen and (min-width: 1024px) {
+    .single-work-card {
+        margin: 0 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: $color-almost-white;
+        padding: 2*$cubit 0;
+        width: 20*$cubit;
+        height: 17*$cubit;
+        overflow: hidden;
+        transition: 0.3s ease-in-out;
         p {
-            display: inline-block;
-            color: $color-almost-white;
+            display: none;
         }
-        .title {
-            color: $color-almost-white;
-        }
-        
+    }
+
+
+
+    .title {
+        font-size: 1.8rem;
+        color: $color-main;
+        margin: 0;
+        text-align: center;
+        transition: 0.2s;
+    }
+
+    .work-image {
+        position: relative;
+        height: 60%;
+        width: 100%;
+        transition: 1s;
+    }
+
+    .tech-paragraph {
+        margin-top: 2*$cubit;
+        font-weight: 700;
+    }
+
+    .work-out-link {
+    font-size: 0px;
+    transition: 0.3s ease-in-out;
+    }
+
+
+
+
+
+    .single-work-card:hover {   
+        background-color: $color-accent;                                    //on hover
+        width: 50*$cubit;
+        padding: 2*$cubit;
+        height: 48vh;
+            p {
+                display: inline-block;
+                color: $color-almost-white;
+            }
+            .title {
+                color: $color-almost-white;
+                &::first-letter {
+                    color: $color-almost-white;
+                }
+            }
+            
             img {
                 display: none;
                 transition: 1s;
             }
+
             .work-out-link {
                 display: inline-block;
                 padding: 1*$cubit;
@@ -75,4 +101,30 @@ transition: 0.3s ease-in-out;
                 align-self: flex-end;
                 transition-delay: 1s;
             }
-        }
+    }
+}
+
+@media only screen and (max-width: 1023px) {
+
+
+    .single-work-card {
+        // width: 80%;
+        height: auto;
+        max-width: 600px;
+    }
+
+    .work-out-link {
+        padding: 1rem;
+    }
+}
+
+@media only screen and (max-width: 680px) {
+
+    .single-work-card {
+        width: 80%;
+    }
+
+    img {
+        width: 100%;
+    }
+}
