--- a/src/Styles/Portfolio.scss
+++ b/src/Styles/Portfolio.scss
@@ -11,7 +11,14 @@
 #works-container {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
-    flex-grow: 2;
+    // flex-grow: 2;
+}
+
+@media only screen and (max-width: 1023px) {
+    #works-container {
+        flex-direction: column;
+        align-items: center;
+    }
 }
