--- a/src/Styles/Skills.scss
+++ b/src/Styles/Skills.scss
@@ -9,3 +9,20 @@
     display: flex;
     justify-content: space-evenly;
 }
+@media only screen and (max-width: 1000px) {
+    #skills-group {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 3rem;
+    }
+    
+}
+
+// @media only screen and (min-width: 904px) and (max-width: 1000px) {
+//     #skills-section{
+//         height: 500px;
+//     overflow: auto;
+//     -ms-overflow-style: none;  /* IE and Edge */
+//     scrollbar-width: none;  /* Firefox */
+//     } 
+// }
