--- a/src/Styles/Skillset.scss
+++ b/src/Styles/Skillset.scss
@@ -30,3 +30,14 @@
         margin: 1*$cubit;
     }
 }
+@media only screen and (max-width: 1000px) {
+    .skill-card {
+        margin-bottom: 2rem;
+        width: 30*$cubit;
+    }
+}
+@media only screen and (max-width: 650px) {
+    .skill-card {
+        width: 20*$cubit;
+    }
+}
