--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -12,21 +12,21 @@ body, nav, main, div, h1, h2, h3, h4, li, ul, a, p {
     font-weight: 700;
     font-size: 16px;
 }
-@media only screen and (max-width: 1200px) {
-    :root {
-        font-size: 14px;
-    }
-}
-@media only screen and (max-width: 1000px) {
-    :root {
-        font-size: 12px;
-    }
-}
-@media only screen and (max-width: 830px) {
-    :root {
-        font-size: 10px;
-    }
-}
+// @media only screen and (max-width: 1200px) {
+//     :root {
+//         font-size: 14px;
+//     }
+// }
+// @media only screen and (max-width: 1000px) {
+//     :root {
+//         font-size: 12px;
+//     }
+// }
+// @media only screen and (max-width: 830px) {
+//     :root {
+//         font-size: 12px;
+//     }
+// }
 
 body {
     background-color: $color-main;
@@ -35,7 +35,6 @@ body {
 }
 
 #body-div {
-    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,7 +42,7 @@ body {
 }
 
 h1 {
-    height: 20vh;
+    margin-bottom: 3rem;
     font-size: 4rem;
     text-align: center;
     // background-color: $color-main;
@@ -55,18 +54,18 @@ h1 {
 }
 @media only screen and (max-width: 1200px) {
     h1 {
-        height: auto;
         font-size: 4.6rem;
     }
 }
-// @media only screen and (max-width: 830px) {
-//     h1 {
-//         font-size: 6.5rem;
-//     }
-// }
+@media only screen and (max-width: 830px) {
+    h1 {
+        font-size: 4rem;
+    }
+}
+
 h2 {
     color: $color-almost-white;
-    font-size: 2rem;
+    font-size: 2.3rem;
     &::first-letter {
         color: $color-accent;
     }
@@ -75,21 +74,24 @@ h2 {
 p {
     font-weight: 400;
     color: $color-almost-white;
+    font-size: 1rem;
 }
 
 main {
-    height: 80vh;
     width:100%;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+}
+
+section{
+    padding: 7rem 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
+    justify-content: space-around;
 }
-@media only screen and (max-width: 830px) {
-    main {
-        height: 80vh;
-    }
-}
-
 
 a {text-decoration: none;}
 
