ready first deployement

--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -1,5 +1,6 @@
 // Imports
 @import "./variables.scss";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 // Reset
 body, nav, main, div, h1, h2, h3, h4, li, ul, a, p {
