--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -56,25 +56,24 @@ header {
 
 @media only screen and (max-width: 830px) {
     header {
-        // padding-top: 11*$cubit;
+        padding-top: 10rem;
         // height: 65vh;
         justify-content: space-around;
     }
 }
 @media only screen and (max-width: 620px) {
     header{
-        padding-top: 10rem;
-        height: 100vh;
-        height: 100vh;
+        padding-top: 6rem;
+        height: 80vh;
         main {
             height: 100%;
             justify-content: space-around;
         }
         h1 {
-            font-size: 3.5rem;
+            font-size: 3rem;
         }
-        p {
-            font-size: 2.5rem;
+        #header-subtitle {
+            font-size: 2.2rem;
         }
     }
 
