--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -19,7 +19,7 @@ strong {
 }
 
 header {
-    padding: 13rem 0 0;
+    padding: 14rem 0 0;
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -56,13 +56,13 @@ header {
 
 @media only screen and (max-width: 830px) {
     header {
-        padding-top: 10rem;
-        // height: 65vh;
         justify-content: space-around;
+        // height: 65vh;
     }
 }
 @media only screen and (max-width: 620px) {
     header{
+        justify-content: space-around;
         padding-top: 6rem;
         height: 80vh;
         main {
