--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -20,6 +20,8 @@ strong {
 
 header {
     padding: 14rem 0 0;
+    height: 80vh;
+
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -48,8 +50,7 @@ header {
     }
     @media only screen and (max-width: 1200px) {
         h1 {
-            height: auto;
-            font-size: 4.6rem;
+            // height: auto;
         }
     }
 }
@@ -57,23 +58,22 @@ header {
 @media only screen and (max-width: 830px) {
     header {
         justify-content: space-around;
-        // height: 65vh;
+        padding-top: 4rem;
     }
 }
 @media only screen and (max-width: 620px) {
     header{
         justify-content: space-around;
-        padding-top: 6rem;
         height: 80vh;
         main {
             height: 100%;
             justify-content: space-around;
         }
         h1 {
-            font-size: 3rem;
+            font-size: 2.5rem;
         }
         #header-subtitle {
-            font-size: 2.2rem;
+            font-size: 2rem;
         }
     }
 
